syntax = "proto3"; // 指定proto版本
package protos;    // 指定包名

// 指定go包路径
option go_package = "interceptor/protos";

// 定义PingPong服务
service PingPong {
	// 单次请求-响应模式
	rpc Ping(PingRequest) returns (PongResponse);
	// 服务端流模式
	rpc MultiPong(PingRequest) returns (stream PongResponse);
	// 客户端流模式
	rpc MultiPing(stream PingRequest) returns (PongResponse);
	// 双向流模式
	rpc MultiPingPong(stream PingRequest) returns (stream PongResponse);
}

// PingRequest 请求结构
message PingRequest {
	string value = 1;
}

// PongResponse 响应结构
message PongResponse {
    string value = 1;
}
